--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -382,7 +382,7 @@
 				</widget>
 				<packing>
 				  <property name="padding">0</property>
-				  <property name="expand">True</property>
+				  <property name="expand">False</property>
 				  <property name="fill">True</property>
 				</packing>
 			      </child>
@@ -411,6 +411,26 @@ Utility
 				  <property name="padding">0</property>
 				  <property name="expand">False</property>
 				  <property name="fill">True</property>
+				</packing>
+			      </child>
+
+			      <child>
+				<widget class="GtkCheckButton" id="feed_needs_terminal">
+				  <property name="visible">True</property>
+				  <property name="tooltip" translatable="yes">This program requires a terminal to run. Graphical launchers will run the program inside a terminal emulator.</property>
+				  <property name="can_focus">True</property>
+				  <property name="label" translatable="yes">Program runs in a terminal</property>
+				  <property name="use_underline">True</property>
+				  <property name="relief">GTK_RELIEF_NORMAL</property>
+				  <property name="focus_on_click">True</property>
+				  <property name="active">False</property>
+				  <property name="inconsistent">False</property>
+				  <property name="draw_indicator">True</property>
+				</widget>
+				<packing>
+				  <property name="padding">0</property>
+				  <property name="expand">True</property>
+				  <property name="fill">False</property>
 				</packing>
 			      </child>
 			    </widget>
