Replace GPL license entry with options for versions 2 and 3.
Copied from freshmeat.net. Suggested by Andreas K. Förster.

--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -2365,7 +2365,8 @@ OSI Approved :: Common Development and Distribution License (CDDL)
 OSI Approved :: Common Public License
 OSI Approved :: GNAT Modified GPL (GMGPL)
 OSI Approved :: GNU Free Documentation License (FDL)
-OSI Approved :: GNU General Public License (GPL)
+OSI Approved :: GNU General Public License v2
+OSI Approved :: GNU General Public License v3
 OSI Approved :: GNU Lesser General Public License (LGPL)
 OSI Approved :: Guile license
 OSI Approved :: IBM Public License
