--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -2145,7 +2145,9 @@ i386
 i486
 i586
 i686
-ppc64</property>
+ppc
+ppc64
+x86_64</property>
 		  <property name="add_tearoffs">False</property>
 		  <property name="has_frame">True</property>
 		  <property name="focus_on_click">True</property>
