Add the Boost Software License 1.0 (http://www.opensource.org/licenses/BSL-1.0)

--- a/0publish-gui.glade
+++ b/0publish-gui.glade
@@ -2364,6 +2364,7 @@ OSI Approved
 OSI Approved :: Academic Free License (AFL)
 OSI Approved :: Adaptive Public License (APL)
 OSI Approved :: Artistic License
+OSI Approved :: Boost Software License 1.0 (BSL-1.0)
 OSI Approved :: BSD License (original)
 OSI Approved :: BSD License (revised)
 OSI Approved :: Common Development and Distribution License (CDDL)
